implemented a POC plugin for sequential submission of audit logs

--- a/fluent-bit.conf
+++ b/fluent-bit.conf
@@ -12,13 +12,33 @@
     Rate              1
     Dummy             {"log":"level-info","msg":"succesful", "username":"username", "email":"email@email.com", "time":"2020-11-25T12:37:22Z"}
 
-[OUTPUT]
-    Name             stdout
-    Match            *
-    Format           json_stream
+# [OUTPUT]
+#     Name             stdout
+#     Match            *
+#     Format           json_stream
+
+# [OUTPUT]
+#     Name             http
+#     Match            *
+#     Retry_Limit      False
+#     Host             mock
+#     Port             8081
+#     URI              /audit-log
+#     Header           Content-Type application/json
+#     HTTP_User        user
+#     HTTP_Passwd      pass
+#     Format           json_stream
+#     tls              on
+#     tls.verify       off
+
+# [OUTPUT]
+#     Name             stdout2
+#     Match            *
+#     Format           json_stream
+
 
 [OUTPUT]
-    Name             http
+    Name             sequentialhttp
     Match            *
     Retry_Limit      False
     Host             mock
